# Aliya_Smart_Farm

./: README.md  pi hello.txt
Draft/: Aliya-Smart-Farm_Google_sheets.xlsx  Engine_Controller.c  Smart Farm DTC.xlsx  hossam.docx  new_user_credentials.csv  حسام حسن.docx
Draft/Ads and photos/: COver page.psd  logo.psd
Draft/Aws/: 652d2523e9f27a3cf62c9cabc821629e9c399393a83ac02a025feac2c2ebaffe-certificate.pem.crt  652d2523e9f27a3cf62c9cabc821629e9c399393a83ac02a025feac2c2ebaffe-private.pem.key  652d2523e9f27a3cf62c9cabc821629e9c399393a83ac02a025feac2c2ebaffe-public.pem.key  new_user_credentials (1).csv
Draft/IP Cam Python script/: Script.py
Draft/Logo/: face book cover page.psd
Draft/New/: Air_Quality.py  Aliya_Smart_Farm.sh  DTC.py  DTC_Config.txt  Main_ExE.py  Sensor_Board_Handler.py  buzzer.py  google-auth.json  main.cpp  mainwindow.ui.autosave
Draft/أسماء عملاء شركات الدواجن/: 客户.xlsx
HW/: COMPONANTE.xlsx  RELAY+I+O PIN WITH RSPI.xlsx  neqfile.txt
HW/Arch/: New Text Document.txt
HW/CDD/: HW Pcb design Version 3.7z  New folder (4).rar  New folder.rar
HW/HLD/: Bottom Half v1.f3d  Bottom Half v1.iges  Bottom Half v1.step  Top Half v1.f3d  Top Half v1.iges  Top Half v1.step
Mobile App/: Reference.txt  sf-application-9fd005de3554.json
New/: DTC_Config.py  Excel_Local_data.py  Sensor_Connection.py  Sys_Data.py  application.py  panda lib.py
Project management/: ReqView_2.12.1_Crack.txt  tools used.txt
SW/Code trial/: GUI.py  (+3 more)
SW/src/ASF/HVAC/HVAC/HVAC/: CMakeLists.txt  HVAC.cpp  HVAC.h
SW/src/ASF/HVAC/HVAC/HVAC/Sensor_H/: Sensor_H.cpp  Sensor_H.h
(+694 files in other folders)
